--- a/main_app/templates/holding_template/manage_holding_change_password.html
+++ b/main_app/templates/holding_template/manage_holding_change_password.html
@@ -61,14 +61,14 @@ hr {
 <section class="content pb-5">
     <div class="container rounded-3  mb-5">
         <div class="row ">
-            <div class="col-md-3  p-0  d-flex justify-content-start flex-column align-items-center " style="background-color:  #dcdcdc;">
+            <div class="col-md-3 p-0 d-flex justify-content-start flex-column align-items-center " style="background-color:  #dcdcdc;">
                 <div class="profile-photo d-flex justify-content-center align-items-center w-100 " style="height: 300px;">
                {% for holding in holdings %}
                     {% if holding.profile_pic == "" %}
                     بدون تصویر
                     {% else %}
                     <div class="img-cover-outline w-100 h-100 bg-info d-flex justify-content-center align-items-end rounded-bottom-circle ">
-                    <img class="img-fluid mb-4 img-circle object-fit-cover" src="{{ holding.profile_pic }}" alt="Your Photo" style="outline: white solid;">
+                    <img class="img-fluid mb-4 img-circle object-fit-cover w-75" src="{{ holding.profile_pic }}" alt="Your Photo" style="outline: white solid;">
                     {% endif %}
                 </div>
                 </div>
