--- a/main_app/templates/all_template/all_user_download_choice_file_template.html
+++ b/main_app/templates/all_template/all_user_download_choice_file_template.html
@@ -1,420 +1,208 @@
-{% extends 'main_app/base.html' %}
-{% load static %}
-{% block page_title %}{{ page_title }}{% endblock page_title %}
-{% block content %}
-    <style>
-       
-        <!--
-       
-        .tool {
-            position: relative;
-            display: inline-block;
-        }
-
-        -->
-        .tooltiptext {
-            visibility: hidden;
-            width: 240px;
-            background-color: white;
-            color: black;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px 0;
-
-            /* Position the tooltip */
-            position: absolute;
-            z-index: 1;
-
-            display: block;
-            margin-right: 50px;
-            margin-top: -50px;
-            opacity: 80%;
-            font-size: 10px;
-        }
-
-        .tool:hover .tooltiptext {
-            visibility: visible;
-        }
+{% extends 'main_app/base.html' %} {% load static %} {% block page_title %}{{
+page_title }}{% endblock page_title %} {% block content %}
+<style>
 
 
-        .content .container-fluid .col-lg-4 {
-            position: relative;
-            display: inline-block;
-            border-bottom: 1px dotted darkgray;
-        }
+  .tool:hover .tooltiptext {
+    visibility: visible;
+  }
 
-        .col-lg-4 .tooltiptext {
-            visibility: hidden;
-            width: 240px;
-            background-color: darkgray;
-            color: black;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px 0;
-            font-weight: bold;
+  .content .container-fluid .col-lg-4 {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted darkgray;
+  }
 
-            /* Position the tooltip */
-            position: absolute;
-            z-index: 1;
+  .col-lg-4 .tooltiptext {
+    visibility: hidden;
+    width: 240px;
+    background-color: darkgray;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    font-weight: bold;
 
-            display: block;
-            margin-right: 125px;
-            margin-top: -150px;
-            opacity: 80%;
-        }
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
 
-        .col-lg-4:hover .tooltiptext {
-            visibility: visible;
-        }
+    display: block;
+    margin-right: 125px;
+    margin-top: -150px;
+    opacity: 80%;
+  }
 
-        @media only screen and (max-width: 800px) {
-            /* For tablets: */
-            .tooltiptext {
-                width: 50px;
-                display: none;
-            }
+  .col-lg-4:hover .tooltiptext {
+    visibility: visible;
+  }
 
-            .tool {
-                width: 50px;
-            }
+  @media only screen and (max-width: 800px) {
+    /* For tablets: */
+    .tooltiptext {
+      width: 50px;
+      display: none;
+    }
 
-            .button_box {
-                width: 100% !important;
-            }
-        }
+    .tool {
+      width: 50px;
+    }
 
-        .rotated:hover {
-            transition-delay: 1s;
-            transform: rotate(30deg);
-        }
+    .button_box {
+      width: 100% !important;
+    }
+  }
 
+  .rotated:hover {
+    transition-delay: 1s;
+    transform: rotate(30deg);
+  }
 
-        .box:hover {
-            animation-name: rotate;
-            animation-duration: 0.7s;
-        }
+  .box:hover {
+    animation-name: rotate;
+    animation-duration: 0.7s;
+  }
 
-        @keyframes rotate {
-            0% {
-                transform: rotate(0);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
+  @keyframes rotate {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
-       .container {
-        margin: 0 auto;
-        padding: 20px;
-        }
+  .container {
+    margin: 0 auto;
+    padding: 20px;
+  }
 
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  }
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            overflow: hidden;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-        }
+  th,
+  td {
+    padding: 10px;
+    background-color: rgba(45, 169, 194, 0.8);
+    color: #fff;
+    text-align: center;
+    width: 50px;
+    border: 2px solid white;
+  }
 
-        th,
-        td {
-            padding: 10px;
-            background-color: rgba(45, 169, 194, 0.8);
-            color: #fff;
-            text-align: center;
-            width: 50px;
-            border: 2px solid white;
-        }
+  th {
+    text-align: center;
+  }
 
-        th {
-            text-align: center;
-        }
-
-        thead th {
-            background-color: dodgerblue;
-        }
-
-        tbody tr:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-        }
-
-        tbody td {
-            position: relative;
-        }
-
-        tbody td:hover:before {
-            content: "";
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: -9999px;
-            bottom: -9999px;
-            background-color: rgba(255, 255, 255, 0.2);
-            z-index: -1;
-        }
-
-        .row {
-            margin: auto;
-        }
-
-        .a_href {
-            color: white;
-            font-size: 25px;
-
-        }
-
-        .container {
-        margin: 0 auto;
-        padding: 20px;
-        }
-
-        .table_style {
-        overflow-x: auto;
-        overflow-y: auto;
-        max-width: 100%;
-        direction: rtl;
-        }
-
-        a.full-link {
-            display: block;
-            height: 100%;
-            width: 100%;
-            text-decoration: none;
-            color: inherit;
-        }
+  thead th {
+    background-color: dodgerblue;
+  }
 
 
+  tbody td {
+    position: relative;
+  }
 
-    </style>
+  tbody td:hover:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -9999px;
+    bottom: -9999px;
+    background-color: rgba(255, 255, 255, 0.2);
+    z-index: -1;
+  }
 
+  .row {
+    margin: auto;
+  }
 
-    <section class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="container table_style d-flex justify-content-between align-items-center flex-column">
-                    <div class="titel mt-2 w-100" >
-                    <h5 style="color: white;text-align: center">شما می توانید در این صفحه فیش های حقوقی خود را بر اساس
-                        تاریخ مورد نظر
-                        دانلود نمایید</h5>
-                        </div>
-                        <div class="table_style w-75 ">
-                             <table class="mt-5">
-                            <tbody>
-                            <tr>
-                            <th>شرکت</th>
-                            <th>نام</th>
-                            <th>نام خانوادگی</th>
-                            <th>تاریخ فیش حقوقی</th>
-                            <th>دکمه دانلود فایل</th>
-                        </tr>
-                        {% for student_file in student_files %}
-                            <tr>
-                                <td>{{ student_file.company }}</td>
-                                <td>{{ student_file.first_name }}</td>
-                                <td>{{ student_file.last_name }}</td>
-                                <!--student_file.email-->
-                                <!--student_file.date-->
-                                <!--student_file.file_name-->
-                                <!--student_file.subject-->
-                                <td>{{ student_file.jalali_date }}</td>
-                                <td>
-                                    <a class="a_href full-link" href="{{ student_file.file.url }}"
-                                       style="font-size: 20px;" download>دانلود</a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                    </div>
-                </div>
-            </div>
+  .a_href {
+    color: white;
+    font-size: 25px;
+  }
+
+  .container {
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  .table_style {
+    overflow-x: auto;
+    overflow-y: auto;
+    max-width: 100%;
+    direction: rtl;
+  }
+
+  a.full-link {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+    color: inherit;
+  }
+  a{
+    &:hover{
+        color: red;
+        transition: 300ms;
+    }
+  }
+</style>
+
+<section class="content bg-body-secondary">
+  <div class="container-fluid">
+    <div class="row">
+      <div
+        class="container table_style d-flex justify-content-between align-items-center flex-column"
+      >
+        <div class="title  w-75 pt-2 ">
+          <h5 style="color: rgb(0, 0, 0); text-align: center;font-family:vazir;text-shadow: 5px 5px 20px rgba(0, 0, 0);">
+            شما می توانید در این صفحه فیش های حقوقی خود را بر اساس تاریخ مورد
+            نظر دانلود نمایید
+          </h5>
         </div>
-    </section>
+        <div class="col-md-9 pb-5">
+          <table class="table table-primary table-borderless mt-5 rounded-3 table-responsive-md  align-middle" style="font-family: vazir;box-shadow: 0px 0px 10px rgb(79, 102, 204);">
+            <tbody>
+              <tr>
+                <th>شرکت</th>
+                <th>نام</th>
+                <th>نام خانوادگی</th>
+                <th>تاریخ فیش حقوقی</th>
+                <th>لینک دانلود</th>
+              </tr>
+              {% for student_file in student_files %}
+              <tr>
+                <td>{{ student_file.company }}</td>
+                <td>{{ student_file.first_name }}</td>
+                <td>{{ student_file.last_name }}</td>
+                <!--student_file.email-->
+                <!--student_file.date-->
+                <!--student_file.file_name-->
+                <!--student_file.subject-->
+                <td>{{ student_file.jalali_date }}</td>
+                <td>
+                  <a
+                    class="a_href full-link"
+                    href="{{ student_file.file.url }}"
+                    style="font-size: 20px;"
+                    download
+                    >دانلود</a
+                  >
+                </td>
+               
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock content %}
-
-{% block custom_js %}
-    <script>
-        $(document).ready(function () {
-
-            //Dataset
-            var subjects = {{data_name|safe}}
-            var data_present = {{data_present}}
-            var data_absent = {{data_absent}}
-
-            //-------------
-            //- DONUT CHART -
-            var attendanceDataCanvas = $('#attendanceData').get(0).getContext('2d')
-            var donutData = {
-                labels: [
-                    'Present', 'Absent'
-                ],
-                datasets: [
-                    {
-                        data: [{{percent_present}}, {{percent_absent}}],
-                        backgroundColor: ['#00a65a', '#f56954'],
-                    }
-                ]
-            }
-            var donutOptions = {
-                maintainAspectRatio: false,
-                responsive: true,
-            }
-            var attendanceData = new Chart(attendanceDataCanvas, {
-                type: 'doughnut',
-                data: donutData,
-                options: donutOptions
-            });
-
-            //attendanceStatistics
-//Bar Chart
-            var areaChartData = {
-                labels: subjects,
-                datasets: [
-                    {
-                        label: 'Present In Class',
-                        backgroundColor: 'rgba(60,141,188,0.9)',
-                        borderColor: 'rgba(60,141,188,0.8)',
-                        pointRadius: false,
-                        pointColor: '#3b8bba',
-                        pointStrokeColor: 'rgba(60,141,188,1)',
-                        pointHighlightFill: '#fff',
-                        pointHighlightStroke: 'rgba(60,141,188,1)',
-                        data: data_present
-                    },
-
-                    {
-                        label: 'Absent In Class',
-                        backgroundColor: 'rgba(210, 214, 222, 1)',
-                        borderColor: 'rgba(210, 214, 222, 1)',
-                        pointRadius: false,
-                        pointColor: 'rgba(210, 214, 222, 1)',
-                        pointStrokeColor: '#c1c7d1',
-                        pointHighlightFill: '#fff',
-                        pointHighlightStroke: 'rgba(220,220,220,1)',
-                        data: data_absent
-                    },
-                ]
-            }
-            var barChartCanvas = $('#attendanceStatistics').get(0).getContext('2d')
-            var barChartData = jQuery.extend(true, {}, areaChartData)
-            var temp = areaChartData.datasets[0]
-            barChartData.datasets[0] = temp
-            var barChartOptions = {
-                responsive: true,
-                maintainAspectRatio: false,
-                datasetFill: false
-            }
-
-            var barChart = new Chart(barChartCanvas, {
-                type: 'bar',
-                data: barChartData,
-                options: barChartOptions
-            })
-
-
-        })
-
-    </script>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-messaging.js"></script>
-
-
-    <script>
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
-            apiKey: "AIzaSyBarDWWHTfTMSrtc5Lj3Cdw5dEvjAkFwtM",
-            authDomain: "sms-with-django.firebaseapp.com",
-            databaseURL: "https://sms-with-django.firebaseio.com",
-            projectId: "sms-with-django",
-            storageBucket: "sms-with-django.appspot.com",
-            messagingSenderId: "945324593139",
-            appId: "1:945324593139:web:03fa99a8854bbd38420c86",
-            measurementId: "G-2F2RXTL9GT"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig)
-        const messaging = firebase.messaging();
-
-        function InitializeFireBaseMessaging() {
-            messaging
-                .requestPermission()
-                .then(function () {
-                    console.log("Notification Permission");
-                    return messaging.getToken();
-                })
-                .then(function (token) {
-                    console.log("Token : " + token);
-                    sendToServer(token);
-                })
-                .catch(function (reason) {
-                    console.log(reason)
-                })
-        }
-
-        messaging.onMessage(function (payload) {
-            const notificationOption = {
-                body: payload.notification.body,
-                icon: payload.notification.icon,
-
-            }
-            if (Notification.permission == 'granted') {
-                var notification = new Notification(payload.notification.title, notificationOption);
-                notification.onclick = function (event) {
-                    event.preventDefault();
-                    window.open(payload.notification.click_action, "_blank");
-                    notification.close();
-                }
-            }
-            console.log(payload);
-        });
-        messaging.onTokenRefresh(function () {
-            messaging.getToken()
-                .then(function (newToken) {
-                    console.log("New Token : " + newToken);
-                    sendToServer(newToken);
-
-                })
-                .catch(function (reason) {
-                    console.log(reason)
-                })
-        })
-
-        function sendToServer(token) {
-            $.ajax({
-                url: "{% url 'all_fcmtoken' %}",
-                type: 'POST',
-                data: {
-                    token: token,
-                }
-            }).done(function (response) {
-
-
-            }).fail(function (response) {
-            })
-
-        }
-
-        InitializeFireBaseMessaging();
-    </script>
-
-{% endblock custom_js %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
