--- a/main_app/templates/all_template/all_news.html
+++ b/main_app/templates/all_template/all_news.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <style>
-  
+
   .card-img-top {
     object-fit: cover;
     max-width: 100%;
@@ -332,10 +332,15 @@
     <div id="sticky-header"
       style="position: sticky; top: 0; z-index: 1000; background-color:white; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); padding: 10px 0;margin-top: 50px;">
       <div class="row justify-content-center animate__animated animate__fadeIn animate__delay-1s g-3 ;">
+        <div class="col-6 col-sm-4 col-md-3 col-lg-1 w-100">
+          <a href="#" class="company-link" onclick="loadPage('/static/holding-news/holding-news.html'); return false;">
+            هلدینگ توسعه صنایع شهد آذربایجان</a>
+        </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-1 ">
           <a href="#" class="company-link" onclick="loadPage('/static/urmia-main/all_news_81.html'); return false;">قند
             ارومیه</a>
         </div>
+        
         <div class="col-6 col-sm-4 col-md-3 col-lg-1" style="width: 7%;">
           <a href="#" class="company-link" onclick="loadPage('/static/urmia-news/all_news_54.html'); return false;">قند
             خوی</a>
@@ -374,6 +379,7 @@
           <a href="#" class="company-link" onclick="loadPage('/static/steel company/all_news_84.html'); return false;">
             ذوب آهن شمال غرب</a>
         </div>
+        
       </div>
     </div>
 
@@ -388,19 +394,47 @@
 
         <div class="default-content flex-column animate__animated animate__fadeIn">
           <div class="holding-news  animate__animated animate__fadeIn animate__delay-2s">
-            <h2 class="h-1 mb-3">اخبار هلدینگ توسعه صنایع شهد آذربایجان</h2>
+            <h2 class="h-1 mb-3">جدیدترین اخبار</h2>
           </div>
           <div
             class="cards-section animate__animated animate__fadeIn animate__delay-2s row w-100 mt-5 pe-3 d-flex justify-content-center align-items-center ">
-            <div class="col-md-4 mb-4">
+             <div class="col-md-4 mb-4">
               <div class="card w-100">
-                <img src="../../static/media/public/img/iron.webp" class="card-img-top" style="height: 170px;"
+                <img src="../../static/media/public/img/alo-1.jpg" class="card-img-top" style="height: 170px;"
                   alt="iron">
                 <div class="card-body">
-                  <h5 class="card-title">صنعت فولاد</h5>
-                  <p class="card-text">31 اردیبهشت 1403</p>
+                  <h5 class="card-title">آغاز و استارت اولین تولید فله کنسانتره آلبالو</h5>
+                  <p class="card-text">2 مرداد 1404</p>
                   <a href="#" class="btn btn-primary"
-                    onclick="loadPage('/static/news-2/all_news_2.html'); return false;">مشاهده
+                    onclick="loadPage('/static/latest-news/latest-1.html'); return false;">مشاهده
+                    خبر</a>
+                   
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card w-100">
+                <img src="../../static/media/public/img/1-1.jpg" class="card-img-top" style="height: 170px;"
+                  alt="iron">
+                <div class="card-body">
+                  <h5 class="card-title">اصلاح سقف سالن فیلترینگ</h5>
+                  <p class="card-text">2 مرداد 1404</p>
+                  <a href="#" class="btn btn-primary"
+                    onclick="loadPage('/static/latest-news/latest-2.html'); return false;">مشاهده
+                    خبر</a>
+
+                </div>
+              </div>
+            </div>
+              <div class="col-md-4 mb-4">
+              <div class="card w-100">
+                <img src="../../static/media/public/img/7.jpg" class="card-img-top" style="height: 170px;"
+                  alt="iron">
+                <div class="card-body">
+                  <h5 class="card-title">جلسه جمع بندی نهایی مربوط به ساخت خرد کن سیب و اشغال گیر</h5>
+                  <p class="card-text">2 مرداد 1404</p>
+                  <a href="#" class="btn btn-primary"
+                    onclick="loadPage('/static/latest-news/latest-3.html'); return false;">مشاهده
                     خبر</a>
 
                 </div>
@@ -408,60 +442,28 @@
             </div>
             <div class="col-md-4 mb-4">
               <div class="card w-100">
-                <img src="../../static/media/public/img/factory-1.webp" class="card-img-top" style="height: 170px;"
-                  alt="factory">
+                <img src="../../static/media/public/img/11.jpg" class="card-img-top" style="height: 170px;"
+                  alt="iron">
                 <div class="card-body">
-                  <h5 class="card-title">طرح های پتروشیمی</h5>
-                  <p class="card-text">30 اردیبهشت 1403</p>
+                  <h5 class="card-title">قفسه بندی و آماده سازی محل فروشگاه های در حال تاسیس</h5>
+                  <p class="card-text">2 مرداد 1404</p>
                   <a href="#" class="btn btn-primary"
-                    onclick="loadPage('/static/news-1/all_news_1.html'); return false;">مشاهده خبر
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-4">
-              <div class="card w-100">
-                <img src="../../static/media/public/img/factory-2.webp" class="card-img-top" style="height: 170px;"
-                  alt="factory-1">
-                <div class="card-body">
-                  <h5 class="card-title">عرضه محصولات پی‌وی‌سی پتروشیمی اروند ۲ برابر می‌شود</h5>
-                  <p class="card-text">30 اردیبهشت 1403</p>
-                  <a href="#" class="btn btn-primary"
-                    onclick="loadPage('/static/news-3/all_news_3.html'); return false;">مشاهده
+                    onclick="loadPage('/static/latest-news/latest-4.html'); return false;">مشاهده
                     خبر</a>
 
                 </div>
               </div>
             </div>
-          </div>
-          <div
-            class="cards-section animate__animated animate__fadeIn animate__delay-2s row w-100 mt-3 pe-3 d-flex justify-content-center align-items-center">
-            <div class="col-md-6 mb-4">
+              <div class="col-md-4 mb-4">
               <div class="card w-100">
-                <img src="../../static/media/public/img/tomato.webp" class="card-img-top" style="height: 300px;"
-                  alt="tomato">
+                <img src="../../static/media/public/img/22.jpg" class="card-img-top" style="height: 170px;"
+                  alt="iron">
                 <div class="card-body">
-                  <h5 class="card-title">از گوجه فرنگی تا رب گوجه فرنگی صنعتی ترقی</h5>
-                  <p class="card-text">30 اردیبهشت 1403</p>
-
+                  <h5 class="card-title">کلاس آموزشی ترویجی کشاورزان مزارع شهرستان پلدشت</h5>
+                  <p class="card-text">2 مرداد 1404</p>
                   <a href="#" class="btn btn-primary"
-                    onclick="loadPage('/static/news-4/all_news_4.html'); return false;">مشاهده
+                    onclick="loadPage('/static/latest-news/latest-5.html'); return false;">مشاهده
                     خبر</a>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 mb-4">
-              <div class="card w-100">
-                <img src="../../static/media/public/img/crops.webp" class="card-img-top" style="height: 300px;"
-                  alt="crops">
-                <div class="card-body">
-                  <h5 class="card-title">تولید از چغندر به قند</h5>
-                  <p class="card-text">30 اردیبهشت 1403</p>
-                  <a href="#" class="btn btn-primary"
-                    onclick="loadPage('/static/news-5/all_news_5.html'); return false;">مشاهده
-                    خبر</a>
-
                 </div>
               </div>
             </div>
