--- a/main_app/templates/main_app/footer.html
+++ b/main_app/templates/main_app/footer.html
@@ -43,7 +43,7 @@
 <footer class="main-footer footer_style" style="background-color: gainsboro !important; height: 90px !important;">
     <div class="login-logo div_style" style="text-align:center;">
 
-        <h6 class="header h6_style">
+        <h6 class="header h6_style" style="text-shadow: 5px 5px 10px;">
             <div style="display:inline;" id="time">
             </div>
             DEVELOPED BY
